tests/ui/parser/issues/issue-62524.rs
// ignore-tidy-trailing-newlines
// error-pattern: aborting due to previous error
#![allow(uncommon_codepoints)]

y![
Ϥ,